--- a/module4/12_jquery_ajax/thuc_hanh/quan_ly_dien_thoai/src/main/resources/templates/phones/edit.html
+++ b/module4/12_jquery_ajax/thuc_hanh/quan_ly_dien_thoai/src/main/resources/templates/phones/edit.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Edit blog</title>
 </head>
-<h1><a href="/blog">HOME</a></h1>
+<h1><a href="/smartphones/list">HOME</a></h1>
 <body>
-<form th:action="@{/save}" th:object="${smartphone}" method="post">
+<form th:action="@{/smartphones/save}" th:object="${smartphone}" method="post">
     <input th:type="hidden" name="id" th:field="*{id}">
     <table>
         <tr>
@@ -23,10 +23,9 @@
         </tr>
         <tr>
             <td></td>
-            <td><button name="click_save" type="button" th:onclick="'javascript:actionEdit(\'''\');'">update</button></td>
+            <td><button  type="submit" class="actionEdit">update</button></td>
         </tr>
     </table>
 </form>
-
 </body>
 </html>
