--- a/module4/12_jquery_ajax/thuc_hanh/quan_ly_dien_thoai/src/main/resources/templates/phones/list.html
+++ b/module4/12_jquery_ajax/thuc_hanh/quan_ly_dien_thoai/src/main/resources/templates/phones/list.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>List Smartphone</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
+
 
         function addNewSmartPhone() {
             //lay du lieu
@@ -127,8 +135,37 @@
                 <input type="hidden" th:value="${smartphone.id}">
             </td>
         </tr>
+
+
+
+
+
+
+
     </th:block>
 </table>
+<div class="modal fade" id="modelId" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title"></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+            </div>
+            <div class="modal-footer">
+<!--                <button type="button" class="btn btn-primary" id="editBtnModal">Save changes</button>-->
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <div class="show_edit"></div>
 <div class="show_list"></div>
 <script>
@@ -136,36 +173,27 @@
     $(document).ready(function () {
         $(".edit_ajax").click(function () {
             console.log($(this).next().val())
-
             $.ajax(
                 {
                     type: "GET",
                     url: "edit/" + $(this).next().val(),
                     dataType: "html",
                     success: function (data) {
-                        $(".show_edit").html(data);
+                        $(".modal-body").html(data);
+                        $("#modelId").modal("show")
                     }
                 }
             )
         })
 
     })
-    
-    function actionEdit(id) {
-        $.ajax({
-            type : "POST",
-            url : "save/" + id ,
-            dataType: "HTML",
-            success : function (data) {
-                let message = "edit finish!!"
-                $(".show_list").html(data);
-             $(".show_edit").html(message);
-            }
-        })
-    }
+
+
+    // $(document).ready(function () {
+    //     $(".actionEdit").click()
+    // })
+
 
 </script>
-
-
 </body>
 </html>
