--- a/module4/07_spring_data_jpa/thuc_hanh/quan_ly_tinh/src/main/resources/templates/customer/create.html
+++ b/module4/07_spring_data_jpa/thuc_hanh/quan_ly_tinh/src/main/resources/templates/customer/create.html
@@ -12,7 +12,7 @@
 <th:block th:if="${message}">
     <p th:text="${message}"></p>
 </th:block>
-<form th:action="@{/create-customer}" th:object="${customer}" method="post">
+<form th:action="@{/save}" th:object="${customer}" method="post">
     <table>
         <tr>
             <td>First name:</td>
