--- a/module4/case_study/src/main/resources/templates/customer/layout.html
+++ b/module4/case_study/src/main/resources/templates/customer/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="head">
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Spring Customer</title>
@@ -26,6 +26,8 @@
 
         #customers tr:hover {background-color: #ddd;}
 
+
+
         #customers th {
             padding-top: 12px;
             padding-bottom: 12px;
@@ -42,6 +44,33 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
+        }
+
+
+
+        label{
+            width: 100%;
+            padding: 12px 0px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        /*input[type=submit] {*/
+        /*    width: 300px;*/
+        /*    background-color: #4CAF50;*/
+        /*    color: white;*/
+        /*    padding: 14px 20px;*/
+        /*    margin: 8px 0;*/
+        /*    border: none;*/
+        /*    border-radius: 4px;*/
+        /*    cursor: pointer;*/
+        /*    text-align: center;*/
+        /*}*/
+
+        label[type=submit]:hover {
+            background-color: #45a049;
         }
 
         input[type=submit] {
