--- a/module4/case_study/src/main/resources/templates/customer/delete.html
+++ b/module4/case_study/src/main/resources/templates/customer/delete.html
@@ -9,20 +9,20 @@
     </a>
 </p>
 <div id="form">
-    <form action="#" th:action="@{/customer/delete}" th:object="${customer}"
+    <form action="#" th:action="@{/delete}"
           method="POST" novalidate="novalidate">
         <input type="hidden" th:field="*{id}"/>
         <div>
             <label>Name</label>
-            <input type="text" th:field="*{name}"/>
+            <label   th:text="${customer.name}"/>
         </div>
         <div>
             <label>Email</label>
-            <input type="email" th:field="*{email}"/>
+            <label    th:text="${customer.email}"/>
         </div>
         <div>
             <label>Address</label>
-            <input type="text" th:field="*{address}"/>
+            <label  th:text="${customer.address}"/>
         </div>
         <input type="submit" value="Remove"/>
     </form>
