--- a/module5/case_study/furama/src/app/empoloyee/employee-list/employee-list.component.html
+++ b/module5/case_study/furama/src/app/empoloyee/employee-list/employee-list.component.html
@@ -45,9 +45,9 @@
       <!--      <button class="btn-primary btn-danger" (click)="delete(i)">Delete</button>-->
       <!-- Button trigger modal -->
       <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-              [attr.data-bs-target]="'#exampleModal'+ i.id ">
-  Delete
-      </button>
+                             [attr.data-bs-target]="'#exampleModal'+ i.id ">
+      Delete
+    </button>
 
     </td>
     <td><button type="button" class="btn btn-primary" [routerLink]="['/employee/edit',i.id]">Edit</button></td>
@@ -70,6 +70,7 @@
         </div>
       </div>
     </div>
+<!--    modal-->
   </tr>
   </tbody>
 </table>
@@ -77,13 +78,67 @@
 
 <pagination-controls (pageChange)="p = $event"></pagination-controls>
 
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel1">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Bạn có muốn xóa không ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<button type="button" class="btn btn-danger" data-bs-toggle="modal"
+        [attr.data-bs-target]="'#exampleModal'">
+  Delete
+</button>
 
-<!--<div>-->
-<!--  <div *ngFor="let j of user">-->
-<!--    <a>{{j.id}}</a>-->
-<!--    <a>{{j.name}}</a>-->
-<!--  </div>-->
-<!--</div>-->
+
+
+
+<div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header text-center">
+        <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body mx-3">
+        <div class="md-form mb-5">
+          <i class="fas fa-envelope prefix grey-text"></i>
+          <input type="email" id="defaultForm-email" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+        </div>
+
+        <div class="md-form mb-4">
+          <i class="fas fa-lock prefix grey-text"></i>
+          <input type="password" id="defaultForm-pass" class="form-control validate">
+          <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+        </div>
+
+      </div>
+      <div class="modal-footer d-flex justify-content-center">
+        <button class="btn btn-default">Login</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="text-center">
+  <button  class="btn btn-default btn-rounded mb-4" data-toggle="modal"    [attr.data-bs-target]="'#modalLoginForm'">Launch
+    Modal Login Form</button>
+</div>
 
 
 
